--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
     "lodash": "^4.17.10",
+    "mime": "^2.3.1",
+    "mime-db": "^1.35.0",
     "node-mime": "^1.0.0",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
